--- a/src/main/resources/assets/thermalfoundation/lang/it_IT.lang
+++ b/src/main/resources/assets/thermalfoundation/lang/it_IT.lang
@@ -40,11 +40,11 @@ info.thermalfoundation.tome.lexicon.5=per abbandonare conoscenze.
 item.thermalfoundation.tome.lexicon.name=Vocabolario Forge
 item.thermalfoundation.tome.lexicon.empowered.name=Vocabolario Forge (Potenziato)
 
-item.thermalfoundation.material.dustIron.name=Ferro polverizato
-item.thermalfoundation.material.dustGold.name=Oro polverizato
-item.thermalfoundation.material.dustCoal.name=Carbone polverizato
-item.thermalfoundation.material.dustCharcoal.name=Carbonella polverizata
-item.thermalfoundation.material.dustObsidian.name=Ossidiana polverizata
+item.thermalfoundation.material.dustIron.name=Ferro polverizzato
+item.thermalfoundation.material.dustGold.name=Oro polverizzato
+item.thermalfoundation.material.dustCoal.name=Carbone polverizzato
+item.thermalfoundation.material.dustCharcoal.name=Carbonella polverizzata
+item.thermalfoundation.material.dustObsidian.name=Ossidiana polverizzata
 
 item.thermalfoundation.material.nuggetIron.name=Pepita di ferro
 item.thermalfoundation.material.gearIron.name=Ingranaggio di ferro
@@ -55,13 +55,13 @@ item.thermalfoundation.material.dustNiter.name=Salnitro
 
 item.thermalfoundation.material.crystalCinnabar.name=Cinabro
 
-item.thermalfoundation.material.dustCopper.name=Rame polverizato
-item.thermalfoundation.material.dustTin.name=Stagno polverizato
-item.thermalfoundation.material.dustSilver.name=Argento polverizato
-item.thermalfoundation.material.dustLead.name=Piombo polverizato
-item.thermalfoundation.material.dustNickel.name=Metallo ferroso polverizato
-item.thermalfoundation.material.dustPlatinum.name=Metallo scintillante polverizato
-item.thermalfoundation.material.dustMithril.name=Metallo infuso di mana polverizato
+item.thermalfoundation.material.dustCopper.name=Rame polverizzato
+item.thermalfoundation.material.dustTin.name=Stagno polverizzato
+item.thermalfoundation.material.dustSilver.name=Argento polverizzato
+item.thermalfoundation.material.dustLead.name=Piombo polverizzato
+item.thermalfoundation.material.dustNickel.name=Metallo ferroso polverizzato
+item.thermalfoundation.material.dustPlatinum.name=Metallo scintillante polverizzato
+item.thermalfoundation.material.dustMithril.name=Metallo infuso di mana polverizzato
 item.thermalfoundation.material.dustElectrum.name=Miscuglio di elettro
 item.thermalfoundation.material.dustInvar.name=Miscuglio di invar
 item.thermalfoundation.material.dustBronze.name=Miscuglio di bronzo
